few revision before workshop on tests

--- a/test_project/tests_en.ipynb
+++ b/test_project/tests_en.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "The purpose of this tutorial is to clarify certain concepts related to testing in\n",
     "programming and to emphasize good insurance practices\n",
-    "quality in Python. We will also investigate how to profile its code.\n",
+    "quality in Python. We will also investigate how to profile its code in order\n",
     "to determine performance."
    ]
   },
@@ -67,10 +67,10 @@
     }
    },
    "source": [
-    "Un test unitaire est généralement conçu afin d'isoler une unité de code. Il\n",
-    "est important de découpler les tests unitaires.   Nous allons commencer par\n",
-    "nous habituer à la structure générale des tests. Le premier exemple est le\n",
-    "script `utilities.py` et sa classe de tests dans `test_utilities.py`."
+    "A unit test is generally designed to isolate a unit of code. It\n",
+    "is important to decouple unit tests.   We will start with\n",
+    "get used to the general structure of the tests. The first example is the\n",
+    "script `utilities.py` and its test class in `test_utilities.py`."
    ]
   },
   {
@@ -193,7 +193,7 @@
    },
    "outputs": [],
    "source": [
-    "@pytest.fixture(autouse=True, scope='module')\n",
+    "@pytest.fixture(scope='module')\n",
     "def create_converter():\n",
     "    converter = StringConverters()\n",
     "    yield converter\n",
@@ -501,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
