--- a/test_project/tests_fr.ipynb
+++ b/test_project/tests_fr.ipynb
@@ -197,7 +197,7 @@
    },
    "outputs": [],
    "source": [
-    "@pytest.fixture(autouse=True, scope='module')\n",
+    "@pytest.fixture(scope='module')\n",
     "def create_converter():\n",
     "    converter = StringConverters()\n",
     "    yield converter\n",
@@ -506,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
