fix french typos in slides

--- a/test_project/tests_en.ipynb
+++ b/test_project/tests_en.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "Tests et Profilage, Python\n",
+    "Tests and Profiling, Python\n",
     "=========================="
    ]
   },
@@ -385,7 +385,7 @@
     }
    },
    "source": [
-    "Profiling en Python\n",
+    "Profiling in Python\n",
     "-------------------\n",
     "In addition to benchmarking, profiling can also be useful in order to better understand one's program.\n",
     "Profiling is a set of descriptive statistics on the execution time of the various components of a program."
