--- a/OOP/oop_fr.ipynb
+++ b/OOP/oop_fr.ipynb
@@ -97,8 +97,8 @@
     "class Vehicle:\n",
     "    pass\n",
     "\n",
-    "vehicle_ = Vehicle()\n",
-    "vehicle_"
+    "vehicle = Vehicle()\n",
+    "vehicle"
    ]
   },
   {
@@ -143,8 +143,8 @@
     "class Vehicle:\n",
     "    def __init__(self):\n",
     "        pass\n",
-    "vehicle_ = Vehicle()\n",
-    "vehicle_"
+    "vehicle = Vehicle()\n",
+    "vehicle"
    ]
   },
   {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -189,7 +189,7 @@
        "My brand is Toyota"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,9 +205,9 @@
     "    def __repr__(self):\n",
     "        return self.__str__()\n",
     "\n",
-    "vehicle_ = Vehicle()\n",
-    "print(f\"obs desc: {vehicle_}\")\n",
-    "vehicle_"
+    "vehicle = Vehicle()\n",
+    "print(f\"obs desc: {vehicle}\")\n",
+    "vehicle"
    ]
   },
   {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -250,10 +250,10 @@
     "class Vehicle:\n",
     "    def print_message(self):\n",
     "        print(\"vroom vroom\")\n",
-    "vehicle_ = Vehicle()\n",
-    "vehicle_.print_message()\n",
+    "vehicle = Vehicle()\n",
+    "vehicle.print_message()\n",
     "\n",
-    "Vehicle.print_message(vehicle_)\n"
+    "Vehicle.print_message(vehicle)\n"
    ]
   },
   {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -353,20 +353,20 @@
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
     "\n",
-    "vehicle_  = Vehicle('toyota')\n",
+    "vehicle  = Vehicle('toyota')\n",
     "vehicle_2 = Vehicle('BMW')\n",
-    "print(vehicle_)\n",
+    "print(vehicle)\n",
     "print(vehicle_2)\n",
     "\n",
-    "vehicle_.noise = \"vroom\"\n",
-    "vehicle_.possible_brands.append(\"Mercedes\")\n",
-    "print(f\"le bruit de ma premiere instance {vehicle_.noise}\")\n",
+    "vehicle.noise = \"vroom\"\n",
+    "vehicle.possible_brands.append(\"Mercedes\")\n",
+    "print(f\"le bruit de ma premiere instance {vehicle.noise}\")\n",
     "print(f\"les marques possibles de ma deuxième instance sont {vehicle_2.possible_brands}\")\n",
     "\n",
     "vehicle_2.brand = 'Mercedes'\n",
     "vehicle_2.driving_mode.append('hybrid')\n",
     "print(f\"la marque de ma deuxième instance est {vehicle_2.brand}\")\n",
-    "print(f\"les modes de conduite de ma première instance sont {vehicle_.driving_mode}\")"
+    "print(f\"les modes de conduite de ma première instance sont {vehicle.driving_mode}\")"
    ]
   },
   {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -402,7 +402,7 @@
        "2010 toyota corolla"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,8 +428,8 @@
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
     "\n",
-    "vehicle_ = Vehicle.create_from_description(\"2010 toyota corolla\")\n",
-    "vehicle_"
+    "vehicle = Vehicle.create_from_description(\"2010 toyota corolla\")\n",
+    "vehicle"
    ]
   },
   {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -476,24 +476,24 @@
    "source": [
     "class Vehicle:\n",
     "    def __hidden_method(self):\n",
-    "        print(\"I am hidden\")\n",
+    "        print(\"Je suis caché\")\n",
     "\n",
     "    def _hidden_method_2(self):\n",
-    "        print(\"I am hidden as well\")\n",
+    "        print(\"Je suis caché également\")\n",
     "\n",
     "    def not_hidden_method(self):\n",
-    "        print(\"I am not hidden.\")\n",
+    "        print(\"Je ne suis pas caché\")\n",
     "\n",
-    "vehicle_ = Vehicle()\n",
+    "vehicle = Vehicle()\n",
     "try:\n",
-    "    vehicle_.__hidden_method()\n",
+    "    vehicle.__hidden_method()\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -524,7 +524,7 @@
       " |  __weakref__\n",
       " |      list of weak references to the object (if defined)\n",
       "\n",
-      "I am hidden as well\n"
+      "Je suis caché également\n"
      ]
     }
    ],
@@ -534,7 +534,7 @@
     "help(Vehicle)\n",
     "\n",
     "# mais nous pouvons toutefois l'appelée:\n",
-    "vehicle_._hidden_method_2()"
+    "vehicle._hidden_method_2()"
    ]
   },
   {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -570,12 +570,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I am hidden\n"
+      "Je suis caché\n"
      ]
     }
    ],
    "source": [
-    "vehicle_._Vehicle__hidden_method()\n"
+    "vehicle._Vehicle__hidden_method()\n"
    ]
   },
   {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -638,9 +638,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current position is (0, 0, 0)\n",
-      "Current position is (12, 12, 0)\n",
-      "Current position is (0, 0, 0)\n",
+      "Position actuelle: (0, 0, 0)\n",
+      "Position actuelle: (12, 12, 0)\n",
+      "Position actuelle: (0, 0, 0)\n",
       "oh nooo:\n",
       "\tpas assez d'essence\n"
      ]
@@ -650,10 +650,6 @@
     "import math\n",
     "\n",
     "class EuclideanPoint:\n",
-    "    # slots design pattern afin de minimiser l'espace nécessaire\n",
-    "    # pour nos objets issues de la classe présente et de ses\n",
-    "    # enfants.\n",
-    "    __slots__ = \"x\", \"y\", \"z\"\n",
     "\n",
     "    @classmethod\n",
     "    def generate_default(cls):\n",
@@ -686,10 +682,10 @@
     "        self.size = size\n",
     "\n",
     "    def move(self, target_point):\n",
-    "        raise NotImplementedError(\"Base class should implement move method.\")\n",
+    "        raise NotImplementedError(\"Les classes enfants devraient implémenter cette méthode.\")\n",
     "\n",
     "    def get_position(self):\n",
-    "        return f\"Current position is {self.pos}\"\n",
+    "        return f\"Position actuelle: {self.pos}\"\n",
     "\n",
     "class Car(Vehicle):\n",
     "\n",
@@ -745,18 +741,16 @@
     }
    },
    "source": [
-    "oulalala, il y énormément à décortiquer dans la cellule précédente, allons-y tranquillement.\n",
-    "1.  La classe `EuclideanPoint` implémente le patron de conception `__slots__` qui remplace\n",
-    "    le dictionnaire normal utilisé pour enregistrer les attributs associés à une classe.\n",
-    "2.  La classe `EuclideanPoint` utilise une méthode de classe pour aisément instancier\n",
+    "Il y énormément à décortiquer dans la cellule précédente, allons-y tranquillement.\n",
+    "1.  La classe `EuclideanPoint` utilise une méthode de classe pour aisément instancier\n",
     "    un point par défaut.\n",
-    "3. La classe `NotEnoughGasException` extensionne la classe Exception de python. Ceci permet d'agir comme une Exception\n",
+    "2. La classe `NotEnoughGasException` extensionne la classe Exception de python. Ceci permet d'agir comme une Exception\n",
     "    normale mais avec un nom différent, nous permettant de l'isoler lors de la résolution d'exception.\n",
-    "4. La classe `Vehicle` est la classe _parente_ de `Bicycle` et `Car`, c'est-à-dire que ces deux classes sont\n",
+    "3. La classe `Vehicle` est la classe _parente_ de `Bicycle` et `Car`, c'est-à-dire que ces deux classes sont\n",
     "    effectivement des `Vehicle` -- et donc offre l'ensemble des fonctionnalités de `Vehicle` -- mais en offrant davantage\n",
     "    de méthodes ou d'attributs. De plus les deux classes héritant de `Vehicle` _ override_  la méthode `move` de la classe\n",
     "    `Vehicle`.\n",
-    "5. Les deux classes _enfant_ utilisent le mot-clé `super` ce qui a pour effet de pouvoir appeler les\n",
+    "4. Les deux classes _enfant_ utilisent le mot-clé `super` ce qui a pour effet de pouvoir appeler les\n",
     "    méthodes de la classe parent.\n",
     "\n",
     "Comment fonctionne l'héritage ? En python, un mécanisme appelé le `Method Resolution Order`  résout l'ordre de résolution\n",
@@ -776,7 +770,7 @@
    },
    "source": [
     "### Exercice 3\n",
-    "Définisser une classe parent `Shape` avec les méthodes `get_area, get_parameter`.\n",
+    "Définisser une classe parent `Shape` avec les méthodes `get_area, get_perimeter`.\n",
     "Ensuite, défininisser les classes `Rectangle`, `Triangle`, `Square`, et `Circle` qui implémente les deux méthodes de\n",
     "leur classe parent. De plus, implémenter les fonctions `__str__, __repr__`  pour `Shape` et `__init__` pour\n",
     "les autres."
@@ -814,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -829,7 +823,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vehicle with tank capacity of 40 L\n"
+      "capacité de tank de 40 L\n"
      ]
     }
    ],
@@ -847,13 +841,13 @@
     "        self.tank_capacity = tank_capacity\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return f\"vehicle with tank capacity of {self.tank_capacity} L\"\n",
+    "        return f\"capacité de tank de {self.tank_capacity} L\"\n",
     "\n",
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
     "\n",
-    "vehicle_ = Vehicle(40)\n",
-    "print(vehicle_)"
+    "vehicle = Vehicle(40)\n",
+    "print(vehicle)"
    ]
   },
   {
@@ -870,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -885,7 +879,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "oups: Tank capacity must be between 0 and 100 L\n"
+      "oups: La tank devrait avoir plus de 0 litre et moins de 100 litres.\n"
      ]
     }
    ],
@@ -898,21 +892,21 @@
     "    @tank_capacity.setter\n",
     "    def tank_capacity(self, c):\n",
     "        if c < 0 or c > 100:\n",
-    "            raise ValueError(\"Tank capacity must be between 0 and 100 L\")\n",
+    "            raise ValueError(\"La tank devrait avoir plus de 0 litre et moins de 100 litres.\")\n",
     "        self._tank_capacity = c\n",
     "\n",
     "    def __init__(self, tank_capacity):\n",
     "        self.tank_capacity = tank_capacity\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return f\"vehicle with tank capacity of {self.tank_capacity} L\"\n",
+    "        return f\"véhicule avec tank de  {self.tank_capacity} L\"\n",
     "\n",
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
     "\n",
     "try:\n",
-    "    vehicle_ = Vehicle(-180)\n",
-    "    print(vehicle_)\n",
+    "    vehicle = Vehicle(-180)\n",
+    "    print(vehicle)\n",
     "except ValueError as e:\n",
     "    print(f\"oups: {e}\")\n"
    ]
@@ -931,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -972,14 +966,14 @@
     "    @tank_capacity.setter\n",
     "    def tank_capacity(self, c):\n",
     "        if c < 0 or c > 100 / 0.256:\n",
-    "            raise ValueError(\"Tank capacity must be between 0 and 100 L\")\n",
+    "            raise ValueError(\"La tank devrait avoir une capacité de plus de 0 litre et moins de 100 L\")\n",
     "        self._tank_capacity = c / 0.256\n",
     "\n",
     "    def __init__(self, tank_capacity):\n",
     "        self.tank_capacity = tank_capacity\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return f\"vehicle with tank capacity of {self.tank_capacity} L\"\n",
+    "        return f\"véhicule avec capacité de {self.tank_capacity} L\"\n",
     "\n",
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
@@ -1161,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
