--- a/pandas/tutoriel_débutant2.ipynb
+++ b/pandas/tutoriel_débutant2.ipynb
@@ -793,7 +793,7 @@
    ],
    "source": [
     "# iloc peut également être utilisé afin de retourner seulement certaines colonnes\n",
-    "star_wars_data.iloc[:5, :2] #retourne les deux premières colonnes des 5 premières rangées"
+    "bitcoin_data.iloc[:5, :2] #retourne les deux premières colonnes des 5 premières rangées"
    ]
   },
   {
@@ -1305,7 +1305,7 @@
     }
    ],
    "source": [
-    "star_wars_data.loc[:5, ['Fan', 'Princess.Leia']] # 5 première rangée et seulement 2 colonnes"
+    "bitcoin_data.loc[:5, ['Fan', 'Princess.Leia']] # 5 première rangée et seulement 2 colonnes"
    ]
   },
   {
@@ -1901,7 +1901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
