--- a/OOP/oop_en.ipynb
+++ b/OOP/oop_en.ipynb
@@ -69,8 +69,8 @@
     "class Vehicle:\n",
     "    pass\n",
     "\n",
-    "vehicle_ = Vehicle()\n",
-    "vehicle_"
+    "vehicle = Vehicle()\n",
+    "vehicle"
    ]
   },
   {
@@ -101,7 +101,7 @@
     "    def __init__(self):\n",
     "        pass\n",
     "vehicle_ = Vehicle()\n",
-    "vehicle_"
+    "vehicle"
    ]
   },
   {
@@ -158,9 +158,9 @@
     "    def __repr__(self):\n",
     "        return self.__str__()\n",
     "\n",
-    "vehicle_ = Vehicle()\n",
-    "print(f\"obs desc: {vehicle_}\")\n",
-    "vehicle_"
+    "vehicle = Vehicle()\n",
+    "print(f\"obs desc: {vehicle}\")\n",
+    "vehicle"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "metadata": {},
    "source": [
     "#### What is the `self` keyword?\n",
-    "You may have noticed the keyword `self' as the first argument of the\n",
+    "You may have noticed the keyword `self` as the first argument of the\n",
     "methods from the previous example. In fact, it is not a keyword, but rather\n",
     "a convention. This argument refers to the class itself."
    ]
@@ -199,10 +199,10 @@
     "class Vehicle:\n",
     "    def print_message(self):\n",
     "        print(\"vroom vroom\")\n",
-    "vehicle_ = Vehicle()\n",
-    "vehicle_.print_message()\n",
+    "vehicle = Vehicle()\n",
+    "vehicle.print_message()\n",
     "\n",
-    "Vehicle.print_message(vehicle_)\n"
+    "Vehicle.print_message(vehicle)\n"
    ]
   },
   {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -290,20 +290,20 @@
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
     "\n",
-    "vehicle_  = Vehicle('toyota')\n",
+    "vehicle  = Vehicle('toyota')\n",
     "vehicle_2 = Vehicle('BMW')\n",
-    "print(vehicle_)\n",
+    "print(vehicle)\n",
     "print(vehicle_2)\n",
     "\n",
-    "vehicle_.noise = \"vroom\"\n",
-    "vehicle_.possible_brands.append(\"Mercedes\")\n",
-    "print(f\"The noise of my first instance {vehicle_.noise}\")\n",
+    "vehicle.noise = \"vroom\"\n",
+    "vehicle.possible_brands.append(\"Mercedes\")\n",
+    "print(f\"The noise of my first instance {vehicle.noise}\")\n",
     "print(f\"The possible brands of my second instance are {vehicle_2.possible_brands}\")\n",
     "\n",
     "vehicle_2.brand = 'Mercedes'\n",
     "vehicle_2.driving_mode.append('hybrid')\n",
     "print(f\"The brand of my second instance is {vehicle_2.brand}\")\n",
-    "print(f\"the driving modes of my first instance is {vehicle_.driving_mode}\")"
+    "print(f\"the driving modes of my first instance is {vehicle.driving_mode}\")"
    ]
   },
   {
@@ -361,8 +361,8 @@
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
     "\n",
-    "vehicle_ = Vehicle.create_from_description(\"2010 toyota corolla\")\n",
-    "vehicle_"
+    "vehicle = Vehicle.create_from_description(\"2010 toyota corolla\")\n",
+    "vehicle"
    ]
   },
   {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -413,16 +413,16 @@
     "    def not_hidden_method(self):\n",
     "        print(\"I am not hidden.\")\n",
     "\n",
-    "vehicle_ = Vehicle()\n",
+    "vehicle = Vehicle()\n",
     "try:\n",
-    "    vehicle_.__hidden_method()\n",
+    "    vehicle.__hidden_method()\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -463,7 +463,7 @@
     "help(Vehicle)\n",
     "\n",
     "# mais nous pouvons toutefois l'appelée:\n",
-    "vehicle_._hidden_method_2()"
+    "vehicle._hidden_method_2()"
    ]
   },
   {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -500,7 +500,7 @@
     }
    ],
    "source": [
-    "vehicle_._Vehicle__hidden_method()\n"
+    "vehicle._Vehicle__hidden_method()\n"
    ]
   },
   {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -550,13 +550,23 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current position is (0, 0, 0)\n",
+      "Current position is (12, 12, 0)\n",
+      "Current position is (0, 0, 0)\n",
+      "oh nooo:\n",
+      "\tNot enough gas!\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "class EuclideanPoint:\n",
-    "    # slots design pattern to minimize the memory used by this object\n",
-    "    __slots__ = \"x\", \"y\", \"z\"\n",
     "\n",
     "    @classmethod\n",
     "    def generate_default(cls):\n",
@@ -589,7 +599,7 @@
     "        self.size = size\n",
     "\n",
     "    def move(self, target_point):\n",
-    "        raise NotImplementedError(\"Base class should implement move method.\")\n",
+    "        raise NotImplementedError(\"Child class should implement move method.\")\n",
     "\n",
     "    def get_position(self):\n",
     "        return f\"Current position is {self.pos}\"\n",
@@ -613,7 +623,7 @@
     "        if self.tank >= gas_litters_needed:\n",
     "            self.tank -= gas_litters_needed\n",
     "        else:\n",
-    "            raise NotEnoughGasException(\"pas assez d'essence\")\n",
+    "            raise NotEnoughGasException(\"Not enough gas!\")\n",
     "\n",
     "class Bicycle(Vehicle):\n",
     "\n",
@@ -644,18 +654,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "oulalala, there's a lot to unpack in the previous cell, let's go quietly.\n",
-    "1.  The `EuclideanPoint' class implements the `__slots__` design pattern which substitutes for\n",
-    "    the normal dictionary used to record the attributes associated with a class.\n",
-    "2.  The `EuclideanPoint` class uses a class method to easily instantiate\n",
+    "There's a lot to unpack in the previous cell, let's go quietly.\n",
+    "1.  The `EuclideanPoint` class uses a class method to easily instantiate\n",
     "    a default point.\n",
-    "3. The `NotEnoughGasException` class extends the python Exception class. This allows it to act as an Exception like\n",
+    "2. The `NotEnoughGasException` class extends the python Exception class. This allows it to act as an Exception like\n",
     "    normally but with a different name, allowing us to isolate it during exception resolution.\n",
-    "4. The `Vehicle` class is the _parent_ class of `Bicycle` and `Car`, i.e. these two classes are\n",
+    "3. The `Vehicle` class is the _parent_ class of `Bicycle` and `Car`, i.e. these two classes are\n",
     "    actually `Vehicle` -- and therefore offers the full functionality of `Vehicle` -- but with more\n",
     "    methods or attributes. In addition, the two classes inheriting from `Vehicle` _ override the `move` method of the class\n",
     "    `Vehicle` (in our case).\n",
-    "5. Both _child_ classes use the `super' keyword, which has the effect of being able to call the\n",
+    "4. Both _child_ classes use the `super' keyword, which has the effect of being able to call the\n",
     "    methods of the parent class.\n",
     "\n",
     "How does inheritance work? In python, a mechanism called the `Method Resolution Order` resolves the order of resolution. For example, the `move` method is implemented in all classes, so which `move` method should be called?\n",
@@ -670,7 +678,7 @@
    "metadata": {},
    "source": [
     "### Exercise 3\n",
-    "Define a `Shape' parent class with the `get_area, get_parameter' methods.\n",
+    "Define a `Shape` parent class with the `get_area, get_perimeter` methods.\n",
     "Next, define the `Rectangle`, `Triangle`, `Square`, and `Circle` classes which implement the two methods of\n",
     "their parent class. In addition, implement the functions `__str__, __repr__` for `Shape` and `__init__` for all\n",
     "the others classes."
@@ -742,8 +750,8 @@
     "    def __str__(self):\n",
     "        return self.__repr__()\n",
     "\n",
-    "vehicle_ = Vehicle(40)\n",
-    "print(vehicle_)"
+    "vehicle = Vehicle(40)\n",
+    "print(vehicle)"
    ]
   },
   {
@@ -756,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -797,8 +805,8 @@
     "        return self.__repr__()\n",
     "\n",
     "try:\n",
-    "    vehicle_ = Vehicle(-180)\n",
-    "    print(vehicle_)\n",
+    "    vehicle = Vehicle(-180)\n",
+    "    print(vehicle)\n",
     "except ValueError as e:\n",
     "    print(f\"oups: {e}\")\n"
    ]
@@ -914,7 +922,7 @@
     "We understand why the algorithm is structured as a class now. This makes it possible to\n",
     "save data as an attribute to simplify the following methods.\n",
     "Also, you will notice that the tree is instantiated with the `__build` method. As we have seen\n",
-    "earlier, this method is not directly accessible outside the classroom. It is a method\n",
+    "earlier, this method is not directly accessible outside the class. It is a method\n",
     "for constructing the tree, other methods not starting with two underlines\n",
     "are then accessible to users such as the following:\n",
     "\n",
@@ -1033,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
