fixed selected issues before the next semester

--- a/data_types/beginner_workshop_1.ipynb
+++ b/data_types/beginner_workshop_1.ipynb
@@ -11,33 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction to Jupyter Notebook and Google Colab\n",
-    "> In this workshop, we will be using Jupyter. Jupyter is a tool that allows us to write directly in our browser. Jupyter is very popular among data scientists as it allows us to visualize our data directly in our code.\n",
-    "> Jupyter Notebooks are \".ipynb\" files instead of normal \".py\" files. In fact, they work with IPython instead of Python ( IPython being a superset of Python):\n",
-    "> \"IPython (Interactive Python) is a command shell for interactive computing in multiple programming languages, originally developed for the Python programming language, that offers introspection, rich media, shell syntax, tab completion, and history.\"  \n",
-    "Google Colab (the website you are currently on) uses IPYthon and Jupyter Notebooks. Jupyter notebooks are web applications which allows to write files that contain live code, equations, visualisations and text. "
+    "[If you want to install python, here is a good guide.](https://docs.python-guide.org/starting/installation/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Installing Python, required packages and Jupyter Lab [Optional, we skip this section because we run our stuff in colab]\n",
-    "> 1. We start by installing Python at the following [url](https://www.python.org/downloads/) (select Python 3.7.3).\n",
-    "2. Verify that the intallation worked by looking up for Python in the Windows search bar. ![py_search](https://i.ibb.co/x8H7Db7/image.png)  \n",
-    "3. Download this current notebook.  ![ce_notebook](https://i.ibb.co/wBmYhR8/image.png)  \n",
-    "4. After you've downloaded this notebook, put it in a folder along with this [file](https://drive.google.com/open?id=1yWr_-NAVEynJrK8YIJIdYAruwAs56AfP).  \n",
-    "5. Open the _command prompt_ on windows or the terminal on Mac/Linux. and go the folder where you saved your jupyter notebook ![cmd](https://i.ibb.co/RvrQMC4/image.png)  \n",
-    "6. Download necessary packages with Pip.  ![pip](https://i.ibb.co/CMmnMCH/image.png)  \n",
-    "7. Open up this notebook on Jupyter lab.  ![lab](https://i.ibb.co/qjJcrB5/image.png)  \n",
-    "![lab2](https://i.ibb.co/5nNj32S/image.png)  \n"
+    "In this workshop, we will be using Jupyter. Jupyter is a tool that allows us to write directly in our browser. Jupyter is very popular among data scientists as it allows us to visualize our data directly in our code. Jupyter Notebooks are \".ipynb\" files instead of normal \".py\" files. In fact, they work with IPython instead of Python ( IPython being a superset of Python): \"IPython (Interactive Python) is a command shell for interactive computing in multiple programming languages, originally developed for the Python programming language, that offers introspection, rich media, shell syntax, tab completion, and history.\"\n",
+    "Google Colab (the website you are currently on) uses IPYthon and Jupyter Notebooks. Jupyter notebooks are web applications which allows to write files that contain live code, equations, visualisations and text."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to properly use JupyterLab or Google Colab [We start here]\n",
+    "## How to properly use JupyterLab or Google Colab\n",
     "> The trick is to properly segment our code into multiple cells in order to organize our work.\n",
     "To create cells, click on the _+_ button in the toolbar at the top of the notebook. A cell can be of multiple types, its default type is code, but it can also contain markdown text. The dropbar at the end of the top menu allows you to choose which type is you cell. You will mostly use code cells.  \n",
     "Cells are stacked on top of each others, so when you execute one cell, later cells can use the variables declared in this previous cell. "
@@ -403,7 +392,7 @@
     "\n",
     "x = None\n",
     "\n",
-    "expect(x).to(equal(\"love\"))"
+    "expect(x).to(equal(\"love\")) # make sure you've ran all previous cells before runnning this one!"
    ]
   },
   {
@@ -997,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
