--- a/data_types/tutoriel_débutant_1.ipynb
+++ b/data_types/tutoriel_débutant_1.ipynb
@@ -9,6 +9,14 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Pour l'installation de Python, voici un bon guide sur Windows.](https://docs.python.org/fr/3/using/windows.html)  \n",
+    "[Pour l'installation de Python, voici un bon guide sur Mac.](https://docs.python.org/fr/3/using/mac.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "zLXKj7jVS76l"
@@ -26,29 +34,10 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "2YZoCKJJ3CQu"
-   },
-   "source": [
-    "#### Installation de Python et des packages nécessaires pour ce tutoriel [Optionnel, pas nécessaire pour ce cours!]\n",
-    "> 1. Installez Python en suivant ce [lien](https://www.python.org/downloads/) (sélectionnez Python 3.7.3)\n",
-    "2. Vérifier que l'installation a fonctionné en cherchant le programme avec la recherche Windows. ![py_search](https://i.ibb.co/x8H7Db7/image.png) \n",
-    "3. Télécharger le notebook présent. ![ce_notebook](https://i.ibb.co/wBmYhR8/image.png) \n",
-    "4. Après avoir télécharger le notebook présent, placez le dans un dossier avec ce [fichier](https://drive.google.com/open?id=1yWr_-NAVEynJrK8YIJIdYAruwAs56AfP) également.  \n",
-    "5. Ouvrez la _command prompt_ sur windows et allez dans votre dossier. Si vous utilisez Mac ou Linux, ouvrez votre terminal.  ![cmd](https://i.ibb.co/RvrQMC4/image.png)  \n",
-    "6. Télécharger les packages nécessaire avec pip. ![pip](https://i.ibb.co/CMmnMCH/image.png)  \n",
-    "7. Ouvrez ce notebook avec jupyter lab. ![lab](https://i.ibb.co/qjJcrB5/image.png)  \n",
-    "![lab2](https://i.ibb.co/5nNj32S/image.png)  \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "lZJWkl2Qchv-"
    },
    "source": [
-    "## Comment utiliser JupyterLab ou bien Google Colab [Début de l'atelier]\n",
+    "## Comment utiliser JupyterLab ou bien Google Colab\n",
     "> Le truc est d'insérer ses nouvelles lignes de code sur des nouvelles cellules de code afin de bien séparer et organiser son travail.  \n",
     "Afin de créer des cellules, cliquer sur le bouton _+_ par-dessus le notebook. Ensuite, vous pouvez choisir le type de cellule, soit une cellule de texte (*Markdown*) ou bien une cellule de code. Les deuxièmes types de cellules nous intéressent davantage.  \n",
     "Les cellules de code s'empilent comme une pyramide, les variables de chaque cellule sont également disponibles dans les prochaines cellules.\n"
@@ -1142,7 +1131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
