--- a/test_project/tests_fr.ipynb
+++ b/test_project/tests_fr.ipynb
@@ -70,60 +70,8 @@
     "Un test unitaire est généralement conçu afin d'isoler une unité de code. Il\n",
     "est important de découpler les tests unitaires.   Nous allons commencer par\n",
     "nous habituer à la structure générale des tests. Le premier exemple est le\n",
-    "script `utilities.py` et sa classe de tests dans `test_utilities.py`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class TestUtilities:\n",
-    "    \"\"\"\n",
-    "    Cette classe est un exemple classique de tests cases du type xUnit.\n",
-    "    Les méthodes setup_class/teardown_class sont appelées automatiquement au début et à la fin des tests unitaire appertenant à cette classe.\n",
-    "    \"\"\"\n",
-    "    @classmethod\n",
-    "    def setup_class(cls):\n",
-    "        cls.converter = StringConverters()\n",
-    "\n",
-    "    @classmethod\n",
-    "    def teardown_class(cls):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def test_translate_to_jadensmith_raises_value_error(self):\n",
-    "        with pytest.raises(ValueError):\n",
-    "            self.converter.translate_to_jadensmith(999)\n",
-    "\n",
-    "    ...."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Nous\n",
-    "retrouvons la structure habituelle des tests avec une classe de test. Remarquer\n",
-    "que la classe commence par le mot-clé `Test` ce qui permet au module pytest de\n",
-    "l'inclure. De plus, les tests dans la classe commencent tous par le préfix `test_\n",
-    "` pour la même raison."
+    "script `utilities.py` et sa classe de tests dans `test_utilities.py`.  \n",
+    "Nous n'allons pas aborder le script `utilities.py` dans ce tutoriel puisqu'il nécessite des concepts de base en programmation orienté objet. Cependant, je le laisse à titre d'exemple puisque vous allez probablement fréquemment rencontrer des exemples similaires. "
    ]
   },
   {
@@ -198,19 +146,19 @@
    "outputs": [],
    "source": [
     "@pytest.fixture(scope='module')\n",
-    "def create_converter():\n",
-    "    converter = StringConverters()\n",
-    "    yield converter\n",
+    "def prepare():\n",
+    "    print('nothing to prepare in this example!')\n",
+    "    return \n",
     "\n",
-    "def test_translate_to_jadensmith_raises_value_error(create_converter):\n",
+    "def test_translate_to_jadensmith_raises_value_error(prepare):\n",
     "    with pytest.raises(ValueError):\n",
-    "        create_converter.translate_to_jadensmith(999)\n",
+    "        ut.translate_to_jadensmith(999)\n",
     "\n",
-    "def test_translate_to_jadensmith_single_word(create_converter):\n",
+    "def test_translate_to_jadensmith_single_word(prepare):\n",
     "    sentence = \"bonjour\"\n",
     "    expected_value = \"Bonjour\"\n",
     "\n",
-    "    actual_value = create_converter.translate_to_jadensmith(sentence)\n",
+    "    actual_value = ut.translate_to_jadensmith(sentence)\n",
     "\n",
     "    assert expected_value == actual_value\n"
    ]
@@ -354,12 +302,11 @@
    "source": [
     "import timeit\n",
     "s = \"\"\"\n",
-    "sc = StringConverters()\n",
     "with open(\"sherlock.txt\") as f:\n",
     "    lines = f.readlines()\n",
-    "meme_lines = [sc.translate_to_internet_meme(l) for l in lines[:100]]\n",
+    "meme_lines = [ut.translate_to_internet_meme(l) for l in lines[:100]]\n",
     "\"\"\"\n",
-    "print(timeit.timeit(stmt=s, setup=\"from __main__ import  StringConverters\", number=1000))"
+    "print(timeit.timeit(stmt=s, setup=\"from __main__ import ut\", number=1000))"
    ]
   },
   {
@@ -506,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
