--- a/loops_numpy/tutoriel_intermediaire_1.ipynb
+++ b/loops_numpy/tutoriel_intermediaire_1.ipynb
@@ -8,6 +8,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: expects in /home/mystery/.local/lib/python3.8/site-packages (0.9.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install expects"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2706,7 +2723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
