--- a/test_project/tests_en.ipynb
+++ b/test_project/tests_en.ipynb
@@ -70,59 +70,8 @@
     "A unit test is generally designed to isolate a unit of code. It\n",
     "is important to decouple unit tests.   We will start with\n",
     "get used to the general structure of the tests. The first example is the\n",
-    "script `utilities.py` and its test class in `test_utilities.py`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class TestUtilities:\n",
-    "    \"\"\"\n",
-    "    This class is a classic example of xUnit test cases.\n",
-    "    The setup_class/teardown_class methods are called automatically at the beginning and end of unit tests belonging to this class.\n",
-    "    \"\"\"\n",
-    "    @classmethod\n",
-    "    def setup_class(cls):\n",
-    "        cls.converter = StringConverters()\n",
-    "\n",
-    "    @classmethod\n",
-    "    def teardown_class(cls):\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "    def test_translate_to_jadensmith_raises_value_error(self):\n",
-    "        with pytest.raises(ValueError):\n",
-    "            self.converter.translate_to_jadensmith(999)\n",
-    "\n",
-    "    ...."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "We get our usual test structure with a test class. Note\n",
-    "that the class starts with the keyword `Test` which allows the pytest module to\n",
-    "include it. In addition, the tests in the class all start with the `test_` prefix.\n",
-    "for the same reason."
+    "script `utilities.py` and its test class in `test_utilities.py`.\n",
+    "This test requires some knowledge into object-oriented programming. I will skip this example for now, but keep in mind this methodology is often used."
    ]
   },
   {
@@ -194,19 +143,19 @@
    "outputs": [],
    "source": [
     "@pytest.fixture(scope='module')\n",
-    "def create_converter():\n",
-    "    converter = StringConverters()\n",
-    "    yield converter\n",
+    "def prepare():\n",
+    "    print('nothing to prepare in this example!')\n",
+    "    return \n",
     "\n",
-    "def test_translate_to_jadensmith_raises_value_error(create_converter):\n",
+    "def test_translate_to_jadensmith_raises_value_error(prepare):\n",
     "    with pytest.raises(ValueError):\n",
-    "        create_converter.translate_to_jadensmith(999)\n",
+    "        ut.translate_to_jadensmith(999)\n",
     "\n",
-    "def test_translate_to_jadensmith_single_word(create_converter):\n",
+    "def test_translate_to_jadensmith_single_word(prepare):\n",
     "    sentence = \"hello\"\n",
     "    expected_value = \"Hello\"\n",
     "\n",
-    "    actual_value = create_converter.translate_to_jadensmith(sentence)\n",
+    "    actual_value = ut.translate_to_jadensmith(sentence)\n",
     "\n",
     "    assert expected_value == actual_value\n"
    ]
@@ -349,12 +298,11 @@
    "source": [
     "import timeit\n",
     "s = \"\"\"\n",
-    "sc = StringConverters()\n",
     "with open(\"sherlock.txt\") as f:\n",
     "    lines = f.readlines()\n",
-    "meme_lines = [sc.translate_to_internet_meme(l) for l in lines[:100]]\n",
+    "meme_lines = [ut.translate_to_internet_meme(l) for l in lines[:100]]\n",
     "\"\"\"\n",
-    "print(timeit.timeit(stmt=s, setup=\"from __main__ import  StringConverters\", number=1000))"
+    "print(timeit.timeit(stmt=s, setup=\"from __main__ import  ut\", number=1000))"
    ]
   },
   {
@@ -501,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
