fix old star wars data

--- a/data_types/tutoriel_débutant_1.ipynb
+++ b/data_types/tutoriel_débutant_1.ipynb
@@ -572,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert le_quebec == phrase[0:9]"
+    "le_quebec == phrase[0:9]"
    ]
   },
   {
