--- a/pandas/beginner_workshop2.ipynb
+++ b/pandas/beginner_workshop2.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> A usual situation is having to open a file in a specific folder. In our case, we want to open the file \"starWarsClean.csv\" which you can download [here](https://drive.google.com/file/d/1XNGKtLzBacQaaP7PgPgyfBHc3Ux1nl2w/view?usp=sharing). I assume that your file is in your download folder after you've downloaded it. This folder is probably somwhere like this,  \n",
+    "> A usual situation is having to open a file in a specific folder. In our case, we want to open the file \"bitcoin_history.csv\" which you can download [here](https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv). I assume that your file is in your download folder after you've downloaded it. This folder is probably somwhere like this,  \n",
     "![path](https://i.ibb.co/kS9XkKR/image.png)  \n",
     "Note that Windows use backslashes (\\). On the other hand, Linux and Mac uses forward slashes (/). So we would write our path like this:"
    ]
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Now that we have access to files anywhere on our computer, we will open the star wars dataset.\n",
+    "> Now that we have access to files anywhere on our computer, we will open the bitcoin ataset.\n",
     "\n",
     "### 2.3 Pandas DataFrame\n",
     "> The pandas module offers a tremendous amount of functionalities for python developers dealing with datasets. DataFrames are important components of the pandas module which represent a data type with rows and columns. Rows are internally represented as index. Both rows and columns have names. We can directly open a csv using the pandas module such that it is mapped to a DataFrame."
@@ -330,7 +330,7 @@
     "import io\n",
     "from google.colab import files\n",
     "uploaded = files.upload()\n",
-    "star_wars_data = pd.read_csv(io.StringIO(uploaded['bitcoin_history.csv'].decode()))\n",
+    "bitcoin_data = pd.read_csv(io.StringIO(uploaded['bitcoin_history.csv'].decode()))\n",
     "'''\n",
     "\n",
     "bitcoin_data.head() # head() returns the 5 first rows by default"
