--- a/pandas/tutoriel_débutant2.ipynb
+++ b/pandas/tutoriel_débutant2.ipynb
@@ -209,7 +209,7 @@
     "id": "vQXqsrCgrvRg"
    },
    "source": [
-    "> Un scénario habituel est l'ouverture d'un fichier dans un dossier spécifique. Nous allons ouvrir le fichier 'starWarsClean.csv' que vous pouvez télécharger [içi](https://drive.google.com/file/d/1XNGKtLzBacQaaP7PgPgyfBHc3Ux1nl2w/view?usp=sharing). J'assume qu'après téléchargement, ce fichier se trouve dans votre dossier téléchargement. Ce dossier correspond probablement à un emplacement similaire à cela:  \n",
+    "> Un scénario habituel est l'ouverture d'un fichier dans un dossier spécifique. Nous allons ouvrir le fichier 'bitcion_history.csv' que vous pouvez télécharger [içi](https://raw.githubusercontent.com/erikmagic/python-tutorials/master/pandas/bitcoin_history.csv). J'assume qu'après téléchargement, ce fichier se trouve dans votre dossier téléchargement. Ce dossier correspond probablement à un emplacement similaire à cela:  \n",
     "![path](https://i.ibb.co/kS9XkKR/image.png)  \n",
     "Notez les \"backwards slashes\" (\\) sur Windows. Tandis que sur Linux ou Mac, ce sont des \"forwards slashes\" (/). Donc on transcrirait ce path comme le suivant:"
    ]
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -409,7 +409,7 @@
        "4  Jul 29, 2020  11,105.9  10,908.4  11,336.5  10,771.8  576.83K    1.81%"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
     "import io\n",
     "from google.colab import files\n",
     "uploaded = files.upload()\n",
-    "star_wars_data = pd.read_csv(io.StringIO(uploaded['bitcoin_history.csv'].decode()))\n",
+    "bitcoin_data = pd.read_csv(io.StringIO(uploaded['bitcoin_history.csv'].decode()))\n",
     "'''\n",
     "\n",
     "bitcoin_data.head() # head() returns the 5 first rows by default"
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -743,50 +743,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>Seen_StarWars</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3292879998</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Aug 02, 2020</td>\n",
+       "      <td>11,118.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3292879538</td>\n",
-       "      <td>No</td>\n",
+       "      <td>Aug 01, 2020</td>\n",
+       "      <td>11,803.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3292765271</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Jul 31, 2020</td>\n",
+       "      <td>11,333.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3292763116</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Jul 30, 2020</td>\n",
+       "      <td>11,096.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3292731220</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>Jul 29, 2020</td>\n",
+       "      <td>11,105.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           id Seen_StarWars\n",
-       "0  3292879998           Yes\n",
-       "1  3292879538            No\n",
-       "2  3292765271           Yes\n",
-       "3  3292763116           Yes\n",
-       "4  3292731220           Yes"
+       "           Date     Price\n",
+       "0  Aug 02, 2020  11,118.9\n",
+       "1  Aug 01, 2020  11,803.1\n",
+       "2  Jul 31, 2020  11,333.4\n",
+       "3  Jul 30, 2020  11,096.2\n",
+       "4  Jul 29, 2020  11,105.9"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1901,7 +1901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
